# NISAR_PRO

./: .gitignore  .gitlab-ci.yml  404.html  README.md  kubectl  setup_secrets.sh
.github/workflows/: deploy-frontend-gh-pages.yml
Docs/: DEVELOPER_GUIDE.md  End-to-End SAR Processing System Architecture (v3.0 - Sentinel-1 Focus).md  End-to-End SAR Processing Tool Deployment Guide.md  README.md  SAR Earth Imaging Dashboard.md  SAR Processing Pipeline Deployment Guide (v2.1 - Sentinel-1 Focus).md  api-reference.md  architecture.md  contributing.md  deployment.md  getting-started.md  isce3-integration.md  linkedin_post_drafts.md  research_findings_v2.md  sar_research_findings.md  sar_system_architecture.md  sar_system_architecture_v2.md  simulated_sar_image.txt  verification-guide.md
Research/: chat1.md  chat2.md
assets/: index-BbB7Z520.css  index-NGN-jM0H.js
clusters/my-cluster/: sar-app.yaml
clusters/my-cluster/flux-system/: gotk-sync.yaml
k8s_manifests/: esa_secret.yaml  kustomization.yaml  sample_sar_job.yaml  sar_dashboard_deployment.yaml  sar_deployment.yaml  sar_gateway_deployment.yaml  sar_processor_isce3.yaml  sar_rbac.yaml  sarjob_crd.yaml
sar-dashboard-v2/: Dockerfile  nginx.conf  package-lock.json  package.json
sar-dashboard-v2/public/: index.html
sar-dashboard-v2/src/: App.css  App.jsx
sar-dashboard-v2/src/components/: Footer.jsx  Hero.jsx  LiveFeed.jsx  Navbar.jsx
sar-dashboard-v2/src/public/: index.html
sar-dashboard-v3/: README.md  index.html  package-lock.json  package.json
sar-dashboard-v3/src/: App.css  App.jsx  index.css  main.jsx
sar-dashboard-v3/src/components/: Comparison.jsx  DataVisualization.jsx  Features.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  ProcessingPipeline.jsx
sar-dashboard-v3/src/pages/: DemoPage.jsx  HomePage.jsx  TechnologyPage.jsx  UseCasesPage.jsx
sar-dashboard-v3/src/pages/app/: AppDashboard.jsx  AppLayout.jsx  ConfigurePage.jsx  DataSourcePage.jsx  JobsPage.jsx  ResultsPage.jsx  SelectLocationPage.jsx
sar-dashboard-v3/src/store/: workflowStore.js
sar-dashboard-v3/src/styles/: app-theme.css  design-system.css
sar-gateway/: .env.example  Cargo.toml  Dockerfile
sar-gateway/src/: esa_client.rs  handlers.rs  jobs.rs  main.rs  models.rs
sar_operator_v2/: Cargo.toml  Dockerfile
sar_operator_v2/src/: controller.rs  crd.rs  main.rs
sar_processor/: Cargo.toml  Dockerfile  Dockerfile.isce3  build.rs  download_nisar.sh
sar_processor/cxx_iface/: CMakeLists.txt  RangeCompFacade.cpp  RangeCompFacade.h
sar_processor/src/: algorithm.rs  errors.rs  io.rs  isce3_ffi.rs  lib.rs  main.rs  nisar_parser.rs  radar_utils.rs  rcmc.rs  rda.rs  safe_parser.rs  smart_downloader.rs
sar_processor/tests/: rda_validation.rs
sar_processor/tests/validation/: mod.rs
terraform/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
terraform/environments/dev/: terraform.tfvars
terraform/environments/prod/: terraform.tfvars
terraform/modules/k8s-cluster/: main.tf
terraform/modules/networking/: main.tf
terraform/modules/storage/: main.tf
