[package]
name = "sar_operator_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.89", features = ["runtime", "derive"] }
kube-runtime = "0.89"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
k8s-openapi = { version = "0.21", features = ["v1_29"] }
schemars = { version = "0.8", features = ["derive"] }