[package]
name = "sar_processor"
version = "0.1.0"
edition = "2021"

[features]
default = []
isce3 = ["dep:cxx", "dep:cxx-build"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
image = "0.24"
ndarray = "0.15"
rustfft = "6.1"
num-complex = "0.4"
num-traits = "0.2"
csv = "1.1"
tempfile = "3.3"
tiff = "0.9"
cxx = { version = "1.0", optional = true }

[build-dependencies]
cxx-build = { version = "1.0", optional = true }